# python-pdfimgextract

./: .gitignore  LICENSE  README.md  pdfimgextract.py  pyproject.toml  requeriments.txt
docs/bench/: benchmark.py
src/: cli.py
src/pdfimgextract/: __init__.py  api.py  args.py  build_tasks.py  cleanup.py  cli.py  colors.py  commit.py  datamodels.py  dedup.py  exit_codes.py  extract.py  filesystem.py  pool.py  progress_bar.py  summary.py  utils.py  worker.py
src/pdfimgextract/cli/: cli.py  parser.py
src/pdfimgextract/constants/: colors.py  exit_codes.py
src/pdfimgextract/core/: build_tasks.py  commit.py  extract.py  pool.py  worker.py
src/pdfimgextract/utils/: dedup.py  filesystem.py  progress_bar.py  summary.py
tests/: test_api.py  test_args.py  test_build_tasks.py  test_cleanup.py  test_cli.py  test_commit.py  test_dedup.py  test_extract.py  test_filesystem.py  test_pool.py  test_progress_bar.py  test_summary.py  test_utils.py  test_worker.py  test_worker_cancelled.py  test_worker_empty_image.py
tests/cli/: test_cli.py  test_parser.py
tests/core/: test_build_tasks.py  test_commit.py  test_extract.py  test_pool.py  test_worker.py
tests/utils/: test_dedup.py  test_filesystem.py  test_progress_bar.py  test_summary.py
