[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfimgextract"
version = "1.6.0"
description = "Fast parallel PDF image extractor"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors = [{ name = "Archmagoz" }]

keywords = ["pdf", "image", "extractor", "pymupdf", "pdf-tools", "cli"]

dependencies = ["pymupdf", "tqdm", "colorama"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Archmagoz/python-pdfimgextract"
Repository = "https://github.com/Archmagoz/python-pdfimgextract"
Issues = "https://github.com/Archmagoz/python-pdfimgextract/issues"

[project.scripts]
pdfimgextract = "pdfimgextract.cli:main"
